--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "@xenova/transformers": "^2.17.1",
-    "discord.js": "^14.15.2"
+    "discord.js": "^14.15.2",
+    "ollama": "^0.5.1"
   }
 }
