--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "discord.js": "^14.15.2",
     "groq-sdk": "^0.4.0",
     "sqlite3": "^5.1.7"
+  },  
+  "engines": {
+    "node": "18.17.1"
   }
 }
